# TD_yolo

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONDA_SETUP.md  CROSS_PLATFORM_MIGRATION_PLAN.md  POSE_DETECTION_STATUS.md  POSE_MODEL_INFO.md  README.md  ROADMAP.md  VENV_SETUP_RESEARCH.md  YoloDetection.toe  debug_server.py  environment-gpu.yml  environment.yml  find_python.py  launch_touchdesigner.py  launch_touchdesigner.sh  main.py  processing.py  pyproject.toml  requirements.base.txt  requirements.inference.txt  setup.bat  setup.sh  setup_all.py  setup_env.py  simple_setup.py  start_yolo_connect.sh  start_yolo_server.py  touch_designer.py
nodes_TD/: .pylintrc  pyrightconfig.json  td_chop_detection.py  td_chop_fps_stats.py  td_chop_openpose.py  td_chop_pose.py  td_dat_openpose_joints.py  td_globals.py  td_logging.py  td_stubs.pyi  td_top_resolution_config.py  td_top_yolo.py
tests/: test_chop_memory.py  test_detection_chop.py  test_draw_flags.py  test_pose_chop.py  test_pose_load.py  test_pose_model.py
utils/: env_utils.py
yolo_models/: bbox_utils.py  torch_transforms.py
yolo_models/detection/: detector.py
yolo_models/log_set/: log_settings_quiet.yaml
yolo_models/processing/: base_processing.py  color_utils.py  detection_processing.py  info.py  pose_processing.py
